# quickflare

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-packages.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  secrets.rs  store.rs  tray.rs  types.rs
src-tauri/src/commands/: mod.rs  scanner.rs  system.rs  tunnel.rs
src-tauri/src/providers/: cloudflared.rs  mod.rs  traits.rs
src-tauri/src/services/: mod.rs  port_scanner.rs  process_detector.rs  tunnel_manager.rs
src/components/: CopyButton.vue  EmptyState.vue  PortRow.vue  Sidebar.vue  StatusDot.vue  ThemeToggle.vue  TunnelCard.vue
src/composables/: useTauriBridge.ts  useTheme.ts
src/router/: index.ts
src/stores/: logs.ts  scanner.ts  settings.ts  tunnels.ts
src/types/: index.ts
src/views/: Create.vue  Dashboard.vue  Logs.vue  Scanner.vue  Settings.vue
