[package]
name = "quickflare"
version = "0.1.2"
description = "A native-feeling Cloudflare Tunnel GUI"
authors = ["Quickflare Contributors"]
edition = "2024"
rust-version = "1.85"

# The lib + bin layout is required by Tauri 2 — `lib.rs` exposes `run()` for
# desktop and mobile, and `main.rs` is a thin shim that just calls into it.
[lib]
name = "quickflare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"

# Async runtime — Tauri 2 ships with tokio under the hood; we declare it
# explicitly so we can spawn the cloudflared child process & stream stdout.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "process",
    "io-util",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cross-platform port enumeration. `netstat2` exposes TCP/UDP socket tables
# on Linux, macOS and Windows without root.
netstat2 = "0.11"

# Cross-platform process introspection — we map listening sockets to the
# owning process to identify the framework (Vite / Next.js / etc.).
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# Logging — `log` + `tauri-plugin-log` lets the frontend tail backend logs.
log = "0.4"
tauri-plugin-log = "2"

# Misc utility crates
once_cell = "1"
parking_lot = "0.12"
thiserror = "2"
anyhow = "1"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
which = "7"
keyring = "3"
reqwest = "0.13"

[features]
# Default Tauri feature set. `custom-protocol` is required for production
# builds where assets are served from the embedded resource bundle.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # smaller binary, no unwinding
codegen-units = 1 # better optimization
lto = true        # link-time optimization for size + speed
opt-level = "s"   # optimize for size — desktop binary is bandwidth-sensitive
strip = true      # strip debug symbols from the final artifact
